# messenger

./: LICENSE  README.md
TerminalClient/: CMakeLists.txt
console_client/: CMakeLists.txt  conanfile.txt  main.cpp
console_client/include/: console_client.hpp
console_client/src/: console_client.cpp
cpp/: CMakeLists.txt
cpp/server/: CMakeLists.txt  main.cpp
cpp/server/src/: Database.cpp
qt_client/: CMakeLists.txt
server/: CMakeLists.txt  conanfile.txt  main.cpp
server/include/: ConfigParser.hpp  Database.hpp  DatabaseProxy.hpp  Logger.hpp  Server.hpp
server/include/DatabaseProxy/: DatabaseProxy.hpp  PostgresqlProxy.hpp
server/include/Message/: Message.hpp  MessageType.hpp
server/src/: CMakeLists.txt  ConfigParser.cpp  DatabaseProxy.cpp  Logger.cpp  Server.cpp  main.cpp
server/src/DatabaseProxy/: DatabaseProxy.cpp  PostgresqlProxy.cpp
server/test/: CMakeLists.txt  test.cpp
terminal_client/: CMakeLists.txt  conanfile.txt  main.cpp
terminal_client/include/: terminal_client.hpp
terminal_client/src/: terminal_client.cpp
